<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    tools:context="com.journaldev.passingdatabetweenfragments.Main2Activity">

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/o1"
        android:layout_alignBottom="@+id/o1"
        android:layout_alignLeft="@+id/t4"
        android:layout_alignStart="@+id/t4"
        android:text="@string/outputusername"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/holo_orange_light"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="30dp" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t1"
        android:layout_alignStart="@+id/t1"
        android:layout_below="@+id/t1"
        android:layout_marginTop="34dp"
        android:text="@string/outputemail_address"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/holo_orange_light"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="80dp" />

    <TextView
        android:id="@+id/t3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t2"
        android:layout_alignStart="@+id/t2"
        android:layout_below="@+id/t2"
        android:layout_marginTop="28dp"
        android:text="@string/password"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/holo_orange_light"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="140dp" />

    <TextView
        android:id="@+id/t4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t5"
        android:layout_alignStart="@+id/t5"
        android:layout_below="@+id/t3"
        android:layout_marginTop="32dp"
        android:text="@string/encrypted_password"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/holo_orange_light"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="196dp" />

    <TextView
        android:id="@+id/t5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t4"
        android:layout_marginTop="33dp"
        android:layout_toLeftOf="@+id/buttonSave"
        android:layout_toStartOf="@+id/buttonSave"
        android:text="@string/level_of_strength"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/holo_orange_light"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="257dp" />

    <TextView
        android:id="@+id/t6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t5"
        android:layout_alignStart="@+id/t5"
        android:layout_below="@+id/t5"
        android:layout_marginTop="28dp"
        android:text="@string/decryption_difficulty"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/holo_orange_light" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/summary"
        android:textColor="#FF8866"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/o1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/overview"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/t1"
        android:layout_toRightOf="@+id/t1"
        android:gravity="left"
        android:layout_marginLeft="10dp"
        android:text="@string/o1"
        android:textColor="@android:color/holo_green_light" />

    <TextView
        android:id="@+id/o2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/t2"
        android:layout_alignBottom="@+id/t2"
        android:layout_toEndOf="@+id/t2"
        android:layout_toRightOf="@+id/t2"
        android:gravity="left"
        android:text="@string/o2"
        android:textAlignment="viewStart"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/holo_green_light" />

    <TextView
        android:id="@+id/o3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/t3"
        android:layout_alignBottom="@+id/t3"
        android:layout_toEndOf="@+id/t3"
        android:layout_toRightOf="@+id/t3"
        android:gravity="left"
        android:text="@string/o3"
        android:textAlignment="viewStart"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/holo_green_light" />

    <TextView
        android:id="@+id/o4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/t4"
        android:layout_alignBottom="@+id/t4"
        android:layout_toEndOf="@+id/t4"
        android:layout_toRightOf="@+id/t4"
        android:gravity="left"
        android:text="@string/o4"
        android:textAlignment="viewStart"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/holo_green_light"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/o5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/t5"
        android:layout_alignBottom="@+id/t5"
        android:layout_toEndOf="@+id/t5"
        android:layout_toRightOf="@+id/t5"
        android:gravity="left"
        android:text="@string/o5"
        android:textAlignment="viewStart"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/holo_green_light" />

    <TextView
        android:id="@+id/o6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/t6"
        android:layout_alignBottom="@+id/t6"
        android:layout_toEndOf="@+id/t6"
        android:layout_toRightOf="@+id/t6"
        android:gravity="left"
        android:text="@string/o6"
        android:textAlignment="viewStart"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/holo_green_light" />

    <TextView
        android:id="@+id/o7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/message"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="12sp" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/o7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:background="#FF6644"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="monospace" />
</RelativeLayout>
