<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#222222"
        android:padding="20sp">

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPersonName"
        android:textColor="@android:color/holo_green_light"
        android:textSize="26sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/password_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:text="@string/weak"
        android:textColor="@android:color/background_light"
        android:typeface="monospace" />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_strength"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#FF6644"
        android:text="@string/finish"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:typeface="monospace" />

</RelativeLayout>

