<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    tools:context="com.journaldev.passingdatabetweenfragments.SplashScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="34dp"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="34dp"
        android:contentDescription="@string/todo3"
        android:src="@drawable/lock"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="188dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:fontFamily="serif-monospace"
        android:text="@string/created_by"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:fontFamily="serif-monospace"
        android:text="@string/sherwyne_r_costiniano"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginTop="14dp"
        android:fontFamily="serif-monospace"
        android:text="@string/itmawe_201"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:text="X-SECURED"
        android:textColor="@android:color/holo_green_light"
        android:textSize="40sp"
        android:textStyle="bold" />
</RelativeLayout>
